[package]
name = "my-gui-calender"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0" }
chrono = "0.4.34"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
